INTERNSHIP-29: добавлен внутренний метод для валидации стажировки
